# eyra

./: .env.example  .gitignore  .mintignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Info.plist  LICENSE  README.md  SECURITY.md  docs.json  index.mdx  install.sh  package-lock.json  pyproject.toml  requirements.txt  setup.sh  todo.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  publish-pypi.yml  release.yml
Formula/: eyra.rb
apps/EyraMenuBar/: Package.swift
apps/EyraMenuBar/Sources/EyraMenuBar/: AppState.swift  EyraCLI.swift  EyraMenuBarApp.swift  MenuViews.swift
apps/EyraMenuBar/Sources/EyraMenuBarCore/: StatusModel.swift
apps/EyraMenuBar/Tests/EyraMenuBarTests/: StatusModelTests.swift
architecture/: overview.mdx  privacy.mdx  routing.mdx  runtime.mdx  tools.mdx  web-runtime.mdx
development/: extending-eyra.mdx  local-development.mdx  release-readiness.mdx  source-map.mdx  testing.mdx
doc/: .mintignore  docs.json  index.mdx
doc/development/: local-development.mdx  release-readiness.mdx  source-map.mdx  testing.mdx
doc/get-started/: configuration.mdx  first-session.mdx  installation.mdx  menu-bar.mdx  troubleshooting.mdx
doc/guides/: connectors.mdx  external-agents-and-mcp.mdx  memory-and-instructions.mdx  realtime-voice.mdx
doc/project/: changelog.mdx  contributing.mdx
doc/reference/: agent-docs.mdx  certification.mdx  commands.mdx  settings.mdx  web-endpoints.mdx
doc/scripts/: prepare-github-pages.mjs
doc/security/: privacy-model.mdx  security-policy.mdx
docs/: .mintignore  PRODUCT_STRATEGY.md  index.mdx
docs/architecture/: routing.mdx  voice.mdx
docs/development/: local-development.mdx  release-readiness.mdx  source-map.mdx  testing.mdx
docs/get-started/: configuration.mdx  first-session.mdx  installation.mdx  troubleshooting.mdx
docs/guides/: web-ui.mdx
docs/project/: changelog.mdx  contributing.mdx
docs/reference/: agent-docs.mdx  certification.mdx  commands.mdx  tools.mdx  web-endpoints.mdx
docs/security/: privacy-model.mdx
get-started/: configuration.mdx  first-session.mdx  installation.mdx  troubleshooting.mdx
guides/: background-tasks.mdx  connectors.mdx  external-agents-and-mcp.mdx  local-file-work.mdx  triggers-and-reminders.mdx  voice-and-hands-free.mdx
internal-docs/: PRODUCT_STRATEGY.md
project/: changelog.mdx  contributing.mdx  strategy.mdx
reference/: agent-docs.mdx  certification.mdx  commands.mdx  settings.mdx  tools.mdx  web-endpoints.mdx
scripts/: build_github_pages_docs.py  build_menu_bar_app.sh  certify_voice_to_computer.py
security/: privacy-model.mdx  security-policy.mdx
src/: main.py  play_ground.py
src/chat/: capture.py  complexity_scorer.py  loading_animator.py  message_handler.py  session_state.py  words.py
src/clients/: ai_client.py  base_client.py  google_client.py  ollama_client.py
src/config/: mock_client.py  settings.py
src/image/: capture.py
src/modes/: base_mode.py  live_mode.py  manual_mode.py
src/modes/voice/: voice_mode.py
src/runtime/: actions.py  capabilities.py  certification.py  cli.py  coding_jobs.py  context.py  dictation.py  examples.py  external_agents.py  intents.py  jobs.py  live_session.py  models.py  operator_loop.py  planner.py  preflight.py  privacy.py  screen_observer.py  service.py  settings_catalog.py  shared.py  speech_controller.py  startup.py  status_presenter.py  tasks.py  tooling.py  triggers.py  vision.py  voice_diagnostics.py  voice_input.py
src/runtime/connectors/: certification.py  cli.py  manifest.py  registry.py  runner.py  types.py
src/runtime/history/: __init__.py  protocol.py  redaction.py  store.py  types.py
src/runtime/memory/: __init__.py  compression.py  files.py  mcp_client.py  policy.py  service.py
src/runtime/routing/: __init__.py  effort.py  fallback.py  model_registry.py  router.py  tool_policy.py  trace.py  types.py
src/tools/: __init__.py  approval.py  base.py  browser.py  clipboard.py  filesystem.py  macos_context.py  mcp_stdio.py  operator.py  pdf.py  registry.py  screenshot.py  system_info.py  time_tool.py  weather.py
src/utils/: image_history.py  mock_client.py  semantic_history.py  settings.py  sound_player.py  speach.py  text_to_speech.py  theme.py
src/web/: __init__.py  server.py
tests/: test_browser_tool.py  test_capabilities.py  test_certification.py  test_complexity_scorer.py  test_connectors.py  test_context.py  test_docs_site.py  test_external_agents.py  test_filesystem_tool.py  test_image_history.py  test_job_system.py  test_live_mode.py  test_macos_context_tool.py  test_main.py  test_manual_mode.py  test_mcp_stdio_tool.py  test_memory_service.py  test_message_handler.py  test_model_registry.py  test_operator_tools.py  test_package_metadata.py  test_pdf_tool.py  test_planner.py  test_preflight.py  test_routing_policy.py  test_runtime.py  test_session_state.py  test_sound_player.py  test_startup.py  test_system_info.py  test_task_commands.py  test_task_manager.py  test_tool_policy.py  test_tooling.py  test_tools.py  test_triggers.py  test_vision_flow.py  test_voice_diagnostics.py  test_voice_input.py  test_voice_mode.py  (+2 more)
