[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eyra"
version = "1.0.0"
description = "Voice-first AI assistant for macOS terminals."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Soroush Yousefpour" }
]
keywords = ["ai", "voice", "assistant", "macos", "local", "privacy", "ollama", "openai-compatible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=2.31.0",
    "mss>=10.1.0",
    "numpy>=1.26.0",
    "pillow>=12.2.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.2.2",
    "silero-vad>=5.1",
    "sounddevice>=0.5.5",
    "onnxruntime>=1.17.0",
    "playwright>=1.58.0",
]

[project.urls]
Homepage = "https://github.com/gabrimatic/eyra"
Repository = "https://github.com/gabrimatic/eyra"
"Bug Tracker" = "https://github.com/gabrimatic/eyra/issues"
Changelog = "https://github.com/gabrimatic/eyra/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/chat", "src/clients", "src/tools", "src/utils", "src/runtime"]

[tool.hatch.metadata]
allow-direct-references = true
