[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eyra"
version = "4.2.0"
description = "Local-first voice agent for macOS terminals."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.11"
authors = [
    { name = "Soroush Yousefpour" }
]
keywords = ["ai", "voice", "agent", "macos", "local", "privacy", "ollama", "openai-compatible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=2.36.0",
    "mss>=10.2.0",
    "numpy>=1.26.0",
    "pillow>=12.2.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "silero-vad>=5.1",
    "sounddevice>=0.5.5",
    "onnxruntime>=1.26.0",
    "playwright>=1.59.0",
    "pypdf>=6.4.0",
]

[project.scripts]
eyra = "main:run"
eyra-web = "web.server:run"
eyra-doctor = "runtime.cli:doctor"
eyra-setup = "runtime.cli:setup"
eyra-certify = "runtime.cli:certify"
eyra-connectors = "runtime.connectors.cli:main"

[project.urls]
Homepage = "https://github.com/gabrimatic/eyra"
Repository = "https://github.com/gabrimatic/eyra"
"Bug Tracker" = "https://github.com/gabrimatic/eyra/issues"
Changelog = "https://github.com/gabrimatic/eyra/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/chat", "src/clients", "src/tools", "src/utils", "src/runtime", "src/web"]
force-include = { "src/main.py" = "main.py" }

[tool.hatch.metadata]
allow-direct-references = true
